src/styles/_display.scss
.display-header {
  color: white;
  margin: 0;
}

.display-container {
  display: flex;
  justify-content: space-between;
  padding: 15px 30px 15px 30px;
  align-items: center;
}

.per-person {
  display: flex;
  flex-direction: column;
}

h6 {
  margin: 0;
}

.amount-header {
  font-size: 3rem;
  margin: 0;
}

